--- a/src/components/People.module.css
+++ b/src/components/People.module.css
@@ -7,7 +7,7 @@
   display: flex;
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 .allPeople {
